public enum UserType {
    CLIENT, INSTRUCTOR
}
